# dfresearch

./: .env.example  .gitignore  LICENSE  README.md  analysis.ipynb  e -i c7a1d00^  evaluate.py  export.py  prepare.py  program.md  pyproject.toml  pyrightconfig.json  sync_env.sh  train_audio.py  train_image.py  train_video.py
configs/: audio_datasets.yaml  image_datasets.yaml  video_datasets.yaml
datasets/: README.md  audio.yaml.example  image.yaml.example  video.yaml.example
scripts/: ensure_dfresearch_remote.sh  gpu_setup_and_train.sh  remote_gpu_config.env.example  remote_gpu_train.sh  submit_image.sh  sync_env.sh  vps_validate_and_push.sh
src/dfresearch/: __init__.py  cli.py  data.py  transforms.py
src/dfresearch/models/: __init__.py
src/dfresearch/models/audio/: ast_model.py  wav2vec2.py  wavlm.py
src/dfresearch/models/image/: clip_vit.py  convnext.py  efficientnet.py  hybrid_clip_freq.py  resnet50.py  smogy_swin.py
src/dfresearch/models/video/: hiera.py  r3d.py  videomae.py
