[project]
name = "dfresearch"
version = "0.1.0"
description = "Autonomous deepfake detection research for BitMind — baseline models and autoresearch loop"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "torchaudio>=2.2.0",
    "timm>=1.0.0",
    "transformers>=4.40.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.23.0",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "scikit-image>=0.22.0",
    "matplotlib>=3.8.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "einops>=0.7.0",
    "decord>=0.6.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "pyarrow>=15.0.0",
    # Required by data.py download_and_cache_dataset (prepare.py); was missing → 0 samples.
    "gasbench @ git+https://github.com/BitMind-AI/gasbench.git@095985dac77501fad7c71da4d61e92b1e7946bc6",
]

[project.optional-dependencies]
wandb = ["wandb>=0.16.0"]

[project.scripts]
dfresearch = "dfresearch.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# Pin torch/torchvision/torchaudio to the PyTorch CUDA index on Linux/Windows only.
# With `explicit = true`, other packages (e.g. markupsafe) stay on PyPI — avoids
# resolving generic deps from download.pytorch.org (wrong wheels / cp314-only).
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
